- processdialog, minimize or show on taskbar. Going to desktop fails now
- add option in action builder to popup dialog for field values (fill in at runtime)
- add log templates
- add support for GCComments https://userscripts.org/scripts/show/75959
- add plugin that selects geocaches that are also present (or not) in another database

V1.9.6.0

- fix: LiveAPI, log geocache using geocache_visits.txt now logs the geocaches ordered by time
- add: Export to c:geo plugin added. Copy to .cgeo on the phone and perform a database recovery to import the data
- fix: Shapefile, changed text decoding to get the correct names

V1.9.5.0

- change: French language updated (thanks icaunais and RHCV)
- change: Language maintenance improvement. The complete XML will be saved if changes are made and is sorted for easier merging.
- add: Internal web browser, option to paste project-gc pq slitter result in pq series generator
- add: Formula Solver, added functions Latitude and Longitude
- add: LiveAPI, Log geocache now has the option to rotate images
- add: Help added to the GAPP framework
- add: Help implemented for Formula Solver (German and Dutch)
- fix: GSAK database import, now imports also database where LiveAPI columns are missing

V1.9.4.0

- add: OKAPI, Import geocaches within radius
- add: OKAPI, Authorization added. This will add features to be implemented that requires Authentication level 3
- fix: LiveAPI, Import geocaches when not PM now skips PM filters
- add: option to hide the OKAPI menu
- add: Formula Solver plugin (by superudo)
- add: Main screen, added Formula solver to the taskbar

V1.9.3.0

- change: French language updated (thanks icaunais and RHCV)
- change: German language updated (thanks SKAMS)
- change: Framework now supports account name per geocache prefix (GC, MZ, OX, OC etc) (re-import Munzees if applicable)
- add: Action Builder now has a filter Is own